--- a/API-examples/css/countries.css
+++ b/API-examples/css/countries.css
@@ -10,9 +10,12 @@ section h1{
   margin-bottom: 0;
 }
 
+#countries{
+ display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
 .country{
-  /* display: grid;
-  grid-template-columns: repeat(3, 1fr); */
+ 
   background-color: aqua;
   padding: 20px;
   margin: 20px;
